mengubah file mahasiswa dalam data mahasiswa

--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -7,8 +7,10 @@
     <title>Coba Git</title>
 </head>
 <body>
-    <h3>Data Mahasiswa</h3>
-    <li>Mhd. Arya Dhaifullah    : 19076108</li>
+    <h1>Data Mahasiswa</h1>
+    <li>Mhd. Arya Dhaifullah    : 19076103</li>
     <li>M Rizki Ananda          : 19076113</li>
+    <p>contoh paraghraph
+    </p>
 </body>
 </html>
