mengubah isi file mahasiswa dan menabahkan paraghrap

--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -7,8 +7,9 @@
     <title>Coba Git</title>
 </head>
 <body>
-    <h3>Data Mahasiswa</h3>
+    <h4>Data Mahasiswa</h4>
     <li>Mhd. Arya Dhaifullah    : 19076108</li>
-    <li>M Rizki Ananda          : 19076113</li>
+    <p>coba paraghraph</p>
 </body>
+
 </html>
